--- a/cardiovascular_disease_prediction.ipynb
+++ b/cardiovascular_disease_prediction.ipynb
@@ -1688,30 +1688,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "I am surprised to see that Cholesterol is positively affecting the probability of Heart Disease. Higher cholesterol causes Heart Disease.\n",
+        "I am surprised to see that Cholesterol is positively affecting the probability of Heart Disease. Higher cholesterol actually causes Heart Disease. Perhaps this is a limitation of the dataset.\n",
         "\n",
         "Key cardiovascular risk factors:\n",
         "\n",
         "Top risk factors (ranked by importance):\n",
-        "1. ST Slope (ECG measurement)\n",
+        "1. ST Slope (ECG measurement) : Decreases heart disease risk\n",
         "\n",
-        "   Impact: Decreases heart disease risk\n",
+        "2. Maximum Heart Rate : Decreases heart disease risk\n",
         "\n",
-        "2. Maximum Heart Rate\n",
+        "3. Resting ECG Results : Increases heart disease risk\n",
         "\n",
-        "   Impact: Decreases heart disease risk\n",
+        "4. Resting Blood Pressure : Increases heart disease risk\n",
         "\n",
-        "3. Resting ECG Results\n",
-        "\n",
-        "   Impact: Increases heart disease risk\n",
-        "\n",
-        "4. Resting Blood Pressure\n",
-        "\n",
-        "   Impact: Increases heart disease risk\n",
-        "\n",
-        "5. Oldpeak\n",
-        "\n",
-        "   Impact: Increases heart disease risk"
+        "5. Oldpeak : Increases heart disease risk"
       ],
       "metadata": {
         "id": "DagV-5KGYuNQ"
@@ -1728,13 +1718,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 38,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VM832XAu8qhH",
-        "outputId": "96790209-d5e7-4dd2-a8d2-4e44ab119c49"
+        "outputId": "4da3f42a-26d3-4be2-8c84-dda582e13f7e"
       },
       "outputs": [
         {
